--- a/templates/landing_administrators.html
+++ b/templates/landing_administrators.html
@@ -29,35 +29,31 @@
                         <div class="ms-sm-0 row">
                             <div class="ms-4 pt-2 pb-5 logo-content">
                                 <img src="images/logo.png" />
-                                <span class="sbheadline">Store Owner</span>
+                                <span class="sbheadline">Administrator</span>
                             </div>
                         </div>
-                        <div class="ms-sm-0 row">
-                            <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/overview_sidebar_active.png" />
-                                <span>Overview</span>
-                            </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/manageprojects">
-                                <img class="icon_sb" src="images/manage_projects_sidebar.png" />
-                                <span>Manage Projects</span>
-                            </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/userprofile">
-                                <img class="icon_sb" src="images/profile_sidebar.png" />
-                                <span>View Profile</span>
-                            </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
-                                <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
-                                <span>Problem Reporting</span>
-                            </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/projectfaqs">
-                                <img class="icon_sb" src="images/faq_sidebar.png" />
-                                <span>FAQ</span>
-                            </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
-                                <img class="icon_sb" src="images/logout_sidebar.png" />
-                                <span>Log out</span>
-                            </a>
-                        </div>
+						<div class="ms-sm-0 row">
+							<a class="active ps-4 p-3 pt-4  border-start border-3" id="link_sb" href="/administratoroverview">
+								<img class="icon_sb" src="images/overview_sidebar_active.png" />
+								<span>Overview</span>
+							</a>
+							<a class="ps-4 p-3 pt-4" id="link_sb" href="/managemoderators">
+								<img class="icon_sb" src="images/profile_sidebar.png" />
+								<span>Manage Moderators</span>
+							</a>
+							<a class="ps-4 p-3 pt-4" id="link_sb" href="/managestoreowners">
+								<img class="icon_sb" src="images/profile_sidebar.png" />
+								<span>Manage Store Owners</span>
+							</a>
+							<a class="ps-4 p-3 pt-4" id="link_sb" href="/approverejectstoreowners">
+								<img class="icon_sb" src="images/profile_sidebar.png" />
+								<span>Approve / Reject Store Owners</span>
+							</a>
+							<a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
+								<img class="icon_sb" src="images/logout_sidebar.png" />
+								<span>Log out</span>
+							</a>
+						</div>
                     </div>
                 </div>
             </div>
@@ -71,127 +67,106 @@
                         <img class="me-4" src="images/notif_header.png" />
                     </div>
                     <div class="col-2 border-start text-end">
-                        <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ store_owner_information["name"] }}</a></span>
-                    </div>
-                </div>
-                <!-- first box -->
-                <div class="container pt-5">
-                    <div class="row lpbox-l">
-                        <!-- first row -->
-                        <div class="row">
-                            <div class="col-4">
-                                <span class="ms-3" id="headline">Welcome Store Owner</span>
-                            </div>
-                            <div class="col-8" style="text-align: right;">
-                                <a href="/userprofile" id="link">Update Information</a>
-                            </div>
-                        </div>
-                        <!-- second row -->
-                        <div class="row">
-                            <div class="col-4">
-                                <span class="ms-3" id="subtitle">Personal Information</span>
-                            </div>
-                            <div class="col-8" id="subtitle">Store Information</div>
-                        </div>
-                        <!-- third row -->
-                        <div class="row">
-                            <div class="col-4 mb-3 border-bottom">
-                                <span class="ms-3" id="content">Name: {{ store_owner_information["name"] }}</span>
-                            </div>
-                            <div class="col-8 mb-3 border-bottom">
-                                <span id="content">Name: {{ store_owner_information["company"] }}</span>
-                            </div>
-                        </div>
-                        <!-- fourth row -->
-                        <div class="row">
-                            <div class="col-4 border-bottom">
-                                <span class="ms-3 mt-2" id="content">Email: {{ store_owner_information["email"] }}</span>
-                            </div>
-                            <div class="col-8 border-bottom">
-                                <span class="mt-2" id="content">Store URL: {{ store_owner_information["url"] }}</span>
-                            </div>
-                        </div>
+                        <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ fullname }}</a></span>
                     </div>
                 </div>
                 <div class="container pt-5">
                     <div class="row">
                         <!-- second box -->
-                        <div class="col-4">
-                            <div class="row lpbox-s">
+                        <div class="col-5">
+                            <div class="row mmbox-m">
                                 <!-- first row -->
                                 <div class="row">
                                     <div class="col">
-                                        <span class="ms-3" id="headline">All Projects</span>
+                                        <span class="ms-3" id="headline">Moderator Lists</span>
                                     </div>
                                     <div class="col" style="text-align: right;">
-                                        <a href="/manageprojects" id="link">View Details</a>
+                                        <a href="/managemoderators" id="link">View Details</a>
                                     </div>
                                 </div>
-								{% if all_projects | length != 0 %}
-									{%	for n in range(0, all_projects | length)	%}
-									<!-- second row -->
-									{% if n < 3 %}
 									<div class="row">
-										<div class="col border-bottom">
-											<span class="pt-4 ms-3" id="content"><a style="text-decoration:none;color:black;" href="/project/{{ all_projects[n]['id'] }}">{{ all_projects[n]["pname"] }}</a></span>
-										</div>
-										<div class="col border-bottom" style="text-align: right;">
-											<span class="pt-4" id="status">{{ all_projects[n]["rating"] }}</span>
-										</div>
-									</div>		
-									{% endif %}
-									{%	endfor	%}
-								{% endif %}
-                                <!-- third row 
-                                <div class="row">
-                                    <div class="col border-bottom">
-                                        <span class="pt-4 ms-3" id="content">Project 2</span>
-                                    </div>
-                                    <div class="col border-bottom" style="text-align: right;">
-                                        <span class="pt-4" id="status">Bad</span>
-                                    </div>
-                                </div>-->
+									<div class="col border-bottom">
+										<span class="pt-3 pb-2 ms-3" id="content">Active Accounts</span>
+									</div>
+									<div class="col border-bottom" style="text-align: right;">
+										<span class="pt-3" id="status">{{ all_active_accounts["moderator"] }}</span>
+									</div>
+								</div>
+								
+								<div class="row">
+									<div class="col">
+										<span class="pt-3 pb-3 ms-3" id="content"></span>
+									</div>
+									<div class="col" style="text-align: right;">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										<span class="pt-3 pb-3 ms-3" id="content"></span>
+									</div>
+									<div class="col" style="text-align: right;">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										<span class="pt-3 pb-3 ms-3" id="content"></span>
+									</div>
+									<div class="col" style="text-align: right;">
+									</div>
+								</div>
 								
                             </div>
                         </div>
                         <!-- third box -->
-                        <div class="col-8">
-                            <div class="row lpbox-m">
+                        <div class="col-5">
+                            <div class="row mmbox-m">
                                 <!-- first row -->
                                 <div class="row">
                                     <div class="col">
-                                        <span class="ms-3" id="headline">Problems reported</span>
+                                        <span class="ms-3" id="headline">Account Lists</span>
                                     </div>
                                     <div class="col" style="text-align: right;">
-                                        <a href="/problemreporting" id="link">Report Problem</a> 
-                                    </div>
-                                </div>
-                                <!-- second row -->
-                                <div class="row">
-                                    <div class="col"></div>
-                                    <div class="col" style="text-align: right;">
-                                        <span class="pt-3" id="subhead">Status</span>
+                                        <a href="/managestoreowners" id="link">View Details</a> 
                                     </div>
                                 </div>
 								
-								{% if all_issues | length != 0 %}
-									{%	for n in range(0, all_issues | length)	%}
-									<!-- second row -->
-									{% if n < 3 %}
 								<div class="row">
-                                    <div class="col border-bottom">
-                                        <span class="ms-3 pt-4" id="content">Problem {{ all_issues[n]["id"] }}</span>
-                                    </div>
-                                    <div class="col border-bottom" style="text-align: right;">
-                                        <span class="pt-4" id="status">{{ all_issues[n]["status"] }}</span>
-                                    </div>
-                                </div>	
-									{% endif %}
-									{%	endfor	%}
-								{% endif %}
-                            </div>
-                        </div>
-                    </div>
+									<div class="col border-bottom">
+										<span class="pt-4 pb-3 ms-3" id="content">Active Accounts</span>
+									</div>
+									<div class="col border-bottom" style="text-align: right;">
+										<span class="pt-4" id="status">{{ all_active_accounts["active"] }}</span>
+									</div>
+								</div>
+								
+								<div class="row">
+									<div class="col border-bottom">
+										<span class="pt-3 pb-3 ms-3" id="content">Inactive Accounts</span>
+									</div>
+									<div class="col border-bottom" style="text-align: right;">
+										<span class="pt-3" id="status">{{ all_active_accounts["inactive"] }}</span>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col border-bottom">
+										<span class="pt-3 pb-3 ms-3" id="content">Frozen Accounts</span>
+									</div>
+									<div class="col border-bottom" style="text-align: right;">
+										<span class="pt-3" id="status">{{ all_active_accounts["frozen"] }}</span>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										<span class="pt-3 pb-3 ms-3" id="content">Pending Accounts</span>
+									</div>
+									<div class="col" style="text-align: right;">
+										<span class="pt-3" id="status">{{ all_active_accounts["pending"] }}</span>
+									</div>
+								</div>
+							</div>	
+						</div>
+					</div>
+				</div>
                 </div>
             </div>
         </div>
