--- a/templates/landing_moderators.html
+++ b/templates/landing_moderators.html
@@ -29,27 +29,27 @@
                         </div>
                     </div>
                     <div class="ms-sm-0 row">
-                        <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="#">
+                        <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="/moderatoroverview">
                             <img class="icon_sb" src="images/overview_sidebar_active.png" />
                             <span>Overview</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreported">
                             <img class="icon_sb" src="images/problem_reported_sidebar.png" />
                             <span>Problems Reported</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/managestoreowners">
                             <img class="icon_sb" src="images/profile_sidebar.png" />
                             <span>Manage Store Owners</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/approverejectstoreowners">
                             <img class="icon_sb" src="images/profile_sidebar.png" />
-                            <span style="font-size: 15px">Accept/Reject Store Owners</span>
+                            <span style="font-size: 15px">Approve / Reject Store Owners</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
                             <img class="icon_sb" src="images/faq_sidebar.png" />
                             <span>FAQ</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
                             <span>Log out</span>
                         </a>
@@ -81,7 +81,7 @@
                                     <span class="ms-3" id="headline">Problem Reports</span>
                                 </div>
                                 <div class="col-4" style="text-align: right;">
-                                    <a href="#" id="link">View Details</a>
+                                    <a href="/problemsreported" id="link">View Details</a>
                                 </div>
                             </div>
                             <!-- second row -->
@@ -130,7 +130,7 @@
                                     <span class="ms-3" id="headline">Account Lists</span>
                                 </div>
                                 <div class="col-4" style="text-align: right;">
-                                    <a href="#" id="link">View Details</a>
+                                    <a href="/managestoreowners" id="link">View Details</a>
                                 </div>
                             </div>
                             <!-- second row -->
@@ -139,7 +139,7 @@
                                     <span class="ms-3 mt-3" id="header">Active Accounts</span>
                                 </div>
                                 <div class="col-4 border-bottom">
-                                    <span class="mt-3" id="content">4238</span>
+                                    <span class="mt-3" id="content">{{ all_active_accounts["active"] }}</span>
                                 </div>
                             </div>
                             <!-- third row -->
@@ -148,7 +148,7 @@
                                     <span class="ms-3 mt-4" id="header">Inactive Accounts</span>
                                 </div>
                                 <div class="col-4 mb-3 border-bottom">
-                                    <span class="mt-4" id="content">1005</span>
+                                    <span class="mt-4" id="content">{{ all_active_accounts["inactive"] }}</span>
                                 </div>
                             </div>
                             <!-- fourth row -->
@@ -157,7 +157,7 @@
                                     <span class="ms-3 mt-2" id="header">Frozen Accounts</span>
                                 </div>
                                 <div class="col-4 border-bottom">
-                                    <span class="mt-2" id="content">914</span>
+                                    <span class="mt-2" id="content">{{ all_active_accounts["frozen"] }}</span>
                                 </div>
                             </div>
                             <!-- fifth row -->
@@ -166,7 +166,7 @@
                                     <span class="ms-3 mt-3" id="header">Pending Accounts</span>
                                 </div>
                                 <div class="col-4 border-bottom">
-                                    <span class="mt-3" id="content">281</span>
+                                    <span class="mt-3" id="content">{{ all_active_accounts["pending"] }}</span>
                                 </div>
                             </div>
                         </div>
