--- a/templates/approve_reject_store_owners_administrator.html
+++ b/templates/approve_reject_store_owners_administrator.html
@@ -89,7 +89,7 @@ var check = function() {
                             <img class="icon_sb" src="images/profile_sidebar.png" />
                             <span>Manage Store Owners</span>
                         </a>
-                        <a class="active ps-4 p-3 pt-4  border-start border-3" id="link_sb" href="/problemreporting">
+                        <a class="active ps-4 p-3 pt-4  border-start border-3" id="link_sb" href="/approverejectstoreowners">
                             <img class="icon_sb" src="images/profile_sidebar_active.png" />
                             <span>Approve / Reject Store Owners</span>
                         </a>
