To fix the display

--- a/templates/manage_store_owners_moderator.html
+++ b/templates/manage_store_owners_moderator.html
@@ -153,11 +153,11 @@ var check = function() {
 									<span class="ms-3" id="inputhead">Customer Name</span>
 								</div>
 								<div class="col-2">
-								<span class="ms-2" id="inputhead">Company Name</span>
+								<span class="ms-3" id="inputhead">Company Name</span>
 								</div>
 								
-								<div class="col-2">
-								<span class="ms-3" id="inputhead">Status</span>
+								<div class="col-2 ms-2">
+								<span class="ms-4" id="inputhead">Status</span>
 								</div>
 							</div>
 							<hr>
