To fix the display

--- a/templates/manage_store_owners_moderator.html
+++ b/templates/manage_store_owners_moderator.html
@@ -117,7 +117,7 @@ var check = function() {
             <!--second row-->
 			<!--second row-->
 			<div class="container pt-2">
-                <div class="row msobox">
+                <div class="row msobox ms-4">
                         <!-- first row -->
 						
 						<div id="mylist">
