functional delete button

--- a/templates/landing_moderators.html
+++ b/templates/landing_moderators.html
@@ -83,37 +83,31 @@
                             <!-- second row -->
                             <div class="row">
                                 <div class="col-8 border-bottom">
-                                    <span class="ms-3 mt-3" id="header">High Priority Ticket</span>
+                                    <span class="ms-3 mt-3" id="header">Open Ticket</span>
                                 </div>
                                 <div class="col-4 border-bottom">
                                     <span class="mt-3" id="content">4238</span>
                                 </div>
                             </div>
                             <!-- third row -->
-                            <div class="row">
+                            <div class="row mb-5">
                                 <div class="col-8 mb-3 border-bottom">
-                                    <span class="ms-3 mt-4" id="header">Medium Priority Ticket</span>
+                                    <span class="ms-3 mt-4" id="header">Closed Ticket</span>
                                 </div>
                                 <div class="col-4 mb-3 border-bottom">
                                     <span class="mt-4" id="content">1005</span>
                                 </div>
                             </div>
-                            <!-- fourth row -->
-                            <div class="row">
-                                <div class="col-8 border-bottom">
-                                    <span class="ms-3 mt-2" id="header">Low Priority Ticket</span>
+							<div class="row">
+                                <div class="col-8">
                                 </div>
-                                <div class="col-4 border-bottom">
-                                    <span class="mt-2" id="content">914</span>
+                                <div class="col-4">
                                 </div>
                             </div>
-                            <!-- fifth row -->
-                            <div class="row">
-                                <div class="col-8 border-bottom">
-                                    <span class="ms-3 mt-3" id="header">Completed Ticket</span>
+							<div class="row mb-3">
+                                <div class="col-8">
                                 </div>
-                                <div class="col-4 border-bottom">
-                                    <span class="mt-3" id="content">281</span>
+                                <div class="col-4">
                                 </div>
                             </div>
                         </div>
